--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ header{
     align-items: center;
 }
 
-/*Logo*/
+/*Tittle*/
 #title{
     background-color: #852f4d;
     border-radius: 10px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.158);
     justify-content: center;
     align-items: center;
-    padding: 10px 500px 10px 10px;
+    padding: 10px 300px 10px 10px;
     transition: 1s;
 }
 
@@ -30,6 +30,7 @@ header{
     transition: 1s ;
 }
 
+/*Logo*/
 #logo{
     width: 100px;
     border-radius: 10px;
@@ -41,7 +42,7 @@ header{
     transform: scale(1.10);
 }
 
-/*Texto*/
+/*Text*/
 main{
     flex-direction: column;
     justify-content: space-between;
@@ -63,9 +64,10 @@ main h3{
 main p{
     font-weight: 1;
     font-size: 15pt;
-    line-height: 20px;
+    line-height: 30px;
 }
 
+/*Left side list*/
 #list{
     font-size: 13pt;
     flex-direction: row;
@@ -74,23 +76,37 @@ main p{
 #list p{
     display: inline-block;
     color: #ff998e;
-    margin: 10px;
+    margin: 20px;
     transition: 0.5s;
 }
 
 #list p:hover{
     transform: scale(1.20);
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 5px;
     transition: 0.5s;
-    color: #ffb2a9;
-    cursor: default;
+    cursor: pointer;
 }
 
 #list p:active{
     color: white;
-    transform: scale(1.40);
+    transform: scale(1.30);
 }
 
-/*Links*/
+#mainLink{
+    transition: 0.5s;
+    display: inline-block;
+    color: #ffd5d1;
+    margin: 10px;
+    transform: scale(1.20);
+    border: 1px solid #ffd5d1;
+    border-radius: 10px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+/*Links above the text*/
 #link{
     color: #ff998e;
     text-decoration: none;
@@ -101,7 +117,7 @@ main p{
 
 #link:hover{
     transition: 0.5s;
-    color: #ffb2a9;
+    color: #ffd5d1;
     transform: scale(1.20);
 }
 
@@ -110,7 +126,7 @@ main p{
     transition: 0.5s;
 }
 
-/*DIV dos links*/
+/*Links divs*/
 #links1{
     text-align: center;
     line-height: 20px;
@@ -133,6 +149,7 @@ main p{
     transition: 0.5s;
 }
 
+/*Animation above the text*/
 #animate{
     margin-top: 20px;
     position: absolute;
@@ -148,7 +165,7 @@ main p{
 
 footer{
     font-size: 10pt;
-    margin-top: 500px;
+    margin-top: 520px;
     clear: both;
     border-top: 1px solid rgba(255, 255, 255, 0.495);
     color: rgba(255, 255, 255, 0.495);
@@ -162,7 +179,7 @@ footer{
 .color5 {color: #ff998e;}
 
 
-/* MOBILE */
+/* Mobile */
 @media screen and (max-width: 768px){
     #title{
         background-color: #852f4d;
@@ -185,6 +202,33 @@ footer{
         color: #ff998e;
         margin: 10px;
         transition: 0.5s;
+    }
+
+    /*Remove actions styles from web version*/
+
+    #list p:active{
+        transform: scale(1.10);
+        border: none;
+    }
+
+    #list p:hover{
+        transform: scale(1.10);
+        border: none;
+    }
+
+    #list a{
+        text-decoration: none;
+    }
+
+    #mainLink{
+        text-align: right;
+        display: block;
+        color: #ffd5d1;
+        margin: 10px;
+        padding: 2px 13px 2px 10px;
+        transition: 0.5s;
+        border: 5px 2px 5px 5px;
+        font-size: 11pt;
     }
 
     main{
